src/test/resources/public/input/typechecking/pass/pass04.jova
class Tmp {
}
class Cls {

  public int func(int x) {
    bool b;
    bool c;
    bool d;
    d = b || c;
    return 0;
  }


}


