src/test/resources/public/input/typechecking/fail/incorrect_operand/fail08.jova
class Test{

}

class Main {

  public int main() {
    int result;
    bool b;
    Test test;
    result = 1;
    b = result < test;
    return 0;
  }

}